# OpenCv_Based_Document_Scanner

./: CMakeLists.txt  README.md
src/: doc_s.cpp
